# cloud-control-api

./: REALTIME_FLOW.md  WEBSOCKET_PROTOCOL.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: client.py
app/auth/: __init__.py  dependencies.py  jwt.py  schemas.py
app/controllers/: __init__.py  agent.py  auth.py  environments.py
app/core/: __init__.py  config.py  database.py
app/dto/: client_connection.py
app/dtos/: __init__.py  agent.py  auth.py  client_connection.py  environment.py  environment_sync.py
app/models/: __init__.py  access_token.py  audit_log.py  base.py  connection.py  connection_status.py  container.py  environment.py  headscale_node.py  headscale_preauth_key.py  headscale_user.py  provisioning_status.py  published_container.py  published_node.py  user.py
app/realtime/: connection_manager.py  dispatcher.py  manager.py  models.py  protocol.py  websocket.py
app/repositories/: __init__.py  access_token_repository.py  connection_repository.py  environment_repository.py  headscale_node_repository.py  headscale_preauth_key_repository.py  headscale_user_repository.py  published_container_repository.py  published_node_repository.py  user_repository.py
app/services/: __init__.py  access_token_resolver.py  access_token_sync_service.py  agent_authentication_service.py  authentication_service.py  client_connection_confirm_service.py  (+11 more)
docs/: CURRENT_ARCHITECTURE.md
migrations/: env.py
tests/: test_client_connection.py  test_headscale_integration.py  test_provisioning_decision_service.py  test_provisioning_orchestrator.py
(+26 files in other folders)
